--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <section class="hero">
         <img src="profile.JPG" alt="Your Name" class="profile-photo" />
         <h1>David Villerot</h1>
-        <p class="tagline">Cloud Builder & AWS Enthusiast</p>
+        <p class="tagline">Cloud Builder & AWS Cloud Practitioner</p>
         <a
           href="https://builder.aws.com/community/@davjpalt"
           target="_blank"
@@ -36,11 +36,11 @@
           </div>
           <div class="fact-card">
             <h4>🎯 日本語勉強中</h4>
-            <p>日本語能力試験N2合格・N1目指しています！</p>
+            <p>日本語能力試験N2合格・N1を目指しています！</p>
           </div>
           <div class="fact-card">
             <h4>💡 10+ Years in Japan</h4>
-            <p>Based in Fukuoka, Education and Leadership</p>
+            <p>Global mindset, language educator, and aspiring AWS professional — connecting people and technology across borders.</p>
           </div>
         </div>
       </section>
@@ -49,7 +49,7 @@
         <h3>AWS Builder Challenge #2</h3>
         <p>
           I'm currently working on the "Build a website on the cloud" challenge,
-          learning to deploy websites using AWS S3 and CloudFront. This site is
+          learning to deploy websites using AWS S3, CloudFront, and Amplify. This site is
           part of my challenge progress!
         </p>
         <a
