--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <p>日本語能力試験N2合格・N1を目指しています！</p>
           </div>
           <div class="fact-card">
-            <h4>💡 10+ Years in Japan</h4>
-            <p>Global mindset, language educator, and aspiring AWS professional — connecting people and technology across borders.</p>
+            <h4>💡 Residing in Japan</h4>
+            <p>Global mindset, language educator, and aspiring AWS professional. Connecting people and technology across borders.</p>
           </div>
         </div>
       </section>
