--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <section class="hero">
         <img src="profile.JPG" alt="Your Name" class="profile-photo" />
         <h1>David Villerot</h1>
-        <p class="tagline">Cloud Builder & AWS Cloud Practitioner</p>
+        <p class="tagline">Cloud Builder & AWS Solutions Architect - Associate</p>
         <a
           href="https://builder.aws.com/community/@davjpalt"
           target="_blank"
